# argoMCP

./: .env.example  .gitignore  LICENSE  PROJECT_BRIEF.md  README.md  pyproject.toml
src/argo_mcp/: __init__.py  argopy_utils.py  argovis.py  config.py  models.py  server.py
tests/: test_argovis.py  test_tools.py
tests/fixtures/: bgc_profile.json  platform_meta.json  profile_data.json  profile_with_bad_qc.json  search_profiles.json  trajectory.json
